# untaped-orchestration

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  orchestration.yml  release.yml
.superpowers/sdd/: pr3-final-review-fix-report.md  pr3-task-1-report.md  pr3-task-2-report.md  pr3-task-3-report.md  pr3-task-4-report.md  pr3-task-5-report.md
.untaped/orchestration/: registry.toml  store.toml
.untaped/orchestration/decisions/: dec_019f68b6c25074f4b375bba75634cf4d-canonical-markdown-is-authority-toml-metadata-and-bodies-remain.md  dec_019f68b6c3677043928e09f4e89ecab6-item-metadata-is-strict-toml-front-matter-markdown-bytes-are-pre.md  dec_019f68b6c48576e49388dec9e464b5b6-federation-is-explicit-lock-ordered-and-fail-closed-where-comple.md  dec_019f68b6c58f73bc92ac6dbfd1983fab-agent-bootstrap-is-a-deterministically-bounded-brief.md  dec_019f68b6c69772609adcfad1532c7626-git-plus-guarded-atomic-files-is-recovery-no-wal-transaction-jou.md  dec_019f68b6c79e7153b69b0137e8aaed5d-public-stores-contain-decisions-only-unfinished-tasks-remain-pri.md
.untaped/orchestration/views/: decisions.md
docs/: cli.md  decisions.md  file-format.md  recovery.md
docs/orchestration-adoption/: decision-sources.toml  import.toml  review.md
docs/orchestration-adoption/records/: decision-01.md  decision-01.toml  decision-02.md  decision-02.toml  decision-03.md  decision-03.toml  decision-04.md  decision-04.toml  decision-05.md  decision-05.toml  decision-06.md  decision-06.toml
src/untaped_orchestration/: __init__.py  __main__.py  settings.py
tests/: builders.py  cli_fixtures.py  conftest.py
tests/integration/: test_cli_contract.py  test_decision_fault_states.py  test_federation.py  test_import_fault_states.py  test_installed_wheel.py  test_item_mutations.py  test_local_store.py  test_raw_recovery.py  test_recursive_maintenance.py  test_task_fault_states.py
tests/performance/: test_bounded_federation.py
tests/unit/: test_ci_workflow.py  test_documentation_contract.py  test_layering.py  test_orchestration_adoption.py  test_packaged_skill.py  test_release_workflow.py  test_repository_contract.py  test_tool_entrypoint.py
(+104 files in other folders)
